Fix unit testing configuration for `jpro-media` module